# amazon-freertos-helloworld-esp32

./: .gitmodules  CMakeLists.txt  README.md
src/: main.c
